chat con firma e de pdf

--- a/auth/templates/chat_room.html
+++ b/auth/templates/chat_room.html
@@ -25,6 +25,9 @@
                 <button class="logout-btn" onclick="window.location.href='/logout'">
                     🚪 Salir
                 </button>
+                <button class="logout-btn" onclick="window.location.href='/sign'">
+                    Firmar
+                </button>
             </div>
         </div>
 
